Fixed issues with form element alignment.

--- a/css/fusion.css
+++ b/css/fusion.css
@@ -631,8 +631,10 @@ form input[type="password"],
 form select,
 form textarea {
   outline: none;
+  font-family: inherit;
   font-size: 100%;
-  width: 95%;
+  width: 100%;
+  *width: 95%;
   padding: .3em .6em;
   border: 1px solid #9ba6ab;
   -webkit-border-radius: 3px;
@@ -644,6 +646,9 @@ form textarea {
   -webkit-transition: -webkit-box-shadow 250ms ease-out;
   -moz-transition: -moz-box-shadow 250ms ease-out;
   transition: box-shadow 250ms ease-out;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 form input[type="text"]:focus,
 form input[type="number"]:focus,
