--- a/less/forms.less
+++ b/less/forms.less
@@ -110,8 +110,10 @@ form input[type="password"],
 form select,
 form textarea {
 	outline: none;
+	font-family: inherit;
 	font-size: 100%;
-	width: 95%;
+	width: 100%;
+	*width: 95%;
 	padding: .3em .6em;
 	border: 1px solid @formBorderColor;
 	-webkit-border-radius: @radius;
@@ -123,6 +125,9 @@ form textarea {
 	-webkit-transition: -webkit-box-shadow 250ms ease-out;
 	-moz-transition: -moz-box-shadow 250ms ease-out;
 	transition: box-shadow 250ms ease-out;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 form input[type="text"]:focus,
